<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/form_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:hint="@string/task_item_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/form_task_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/task_item_description"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/form_task_title"
        app:layout_constraintStart_toStartOf="@id/form_task_title"
        app:layout_constraintTop_toBottomOf="@id/form_task_title" />

    <EditText
        android:id="@+id/form_task_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/task_item_date"
        android:inputType="none"
        android:focusable="false"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/form_task_description"
        app:layout_constraintStart_toStartOf="@id/form_task_description"
        app:layout_constraintTop_toBottomOf="@id/form_task_description" />

</android.support.constraint.ConstraintLayout>
